Added nav to index.html, and stylesheet.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>index</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
-    
+
+    <nav>
+        <ul id="navbar">
+            <li><a href="#link1">Link1</a></li>
+            <li><a href="#link2">Link2</a></li>
+            <li><a href="#link3">Link3</a></li>
+            <li><a href="#link4">Link4</a></li>
+            <li><a href="#link5">Link5</a></li>
+            <li><a href="#link6">Link6</a></li>
+            <li><a href="#link7">Link7</a></li>
+        </ul>
+    </nav>
+
+    <div id="page-wrapper">
+
+        <section id="section1" class="section">
+
+            <h1><a name="link1">Link1</a></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae, iure voluptas
+                accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque!</p>
+                
+        </section>
+
+    </div>
+
 </body>
+
 </html>
