--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>index</title>
+    <title>Dårarna.nu</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -20,6 +20,7 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="media/favicon.ico">
 
 </head>
 
@@ -42,8 +43,64 @@
         <section id="section1" class="section">
 
             <h1><a name="start" class="headerLink text">Start</a></h1>
+            <p class="text col-1-2 left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae,
+                iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+            <p class="text col-1-2 right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
+                vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
 
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae, iure
+        </section>
+
+        <section id="section2" class="section">
+
+            <h1><a name="about" class="headerLink text">About</a></h1>
+            <p class="text col-1-2 left"> <img src="media/profilepic.jpg" alt="Picture of me goes here" id="profilePic"
+                    class="left">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Atque corrupti vitae, iure
+                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
+                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
+                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+
+            <p class="text col-1-2 right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
+                vitae, iure
                 voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
                 repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
@@ -62,7 +119,8 @@
         </section>
 
         <div id="footer">
-            <p><span class="glyphicon glyphicon-copyright-mark"></span> Marius Franzén - Website is currently in Alpha
+            <p><span class="glyphicon glyphicon-copyright-mark"></span> Copyright Marius Franzén - Website is currently
+                in Alpha
                 v.1</p>
         </div>
 
