--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <section id="section2" class="section">
 
-            <h1><a name="about" class="headerLink text">About Me</a></h1>
+            <h1><a name="about" class="headerLink text">About</a></h1>
             <p class="text col-1-2 left"> <img src="media/profilepic.jpg" alt="Picture of me goes here" id="profilePic"
                     class="left">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae, iure
@@ -115,14 +115,6 @@
                 repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
                 Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
-
-        </section>
-
-        <section id="section3" class="section">
-
-            <h1><a name="games" class="headerLink text">Games</a></h1>
-
-            
 
         </section>
 
