Fixed row issue

--- a/index.html
+++ b/index.html
@@ -42,86 +42,138 @@
 
         <section id="section1" class="section">
 
-            <h1><a name="start" class="headerLink text">Start</a></h1>
-            <p class="text col-1-2 left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae,
-                iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
-            <p class="text col-1-2 right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
-                vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+            <h1 class="headerLink text"><a name="start" class="headerLink text">Start</a></h1>
+
+            <div class="row">
+                <p class="text col-1-2 left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
+                    vitae,
+                    iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+                <p class="text col-1-2 right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
+                    vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+            </div>
 
         </section>
 
         <section id="section2" class="section">
 
-            <h1><a name="about" class="headerLink text">About</a></h1>
-            <p class="text col-1-2 left"> <img src="media/profilepic.jpg" alt="Picture of me goes here" id="profilePic"
-                    class="left">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+            <h1 class="headerLink text"><a name="about" class="headerLink text">About</a></h1>
 
-            <p class="text col-1-2 right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
-                vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Atque corrupti vitae, iure
-                voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab repellendus
-                repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit nobis.
-                Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+            <div class="row">
+                <p class="text col-1-2 left"> <img src="media/profilepic.jpg" alt="Picture of me goes here" id="profilePic"
+                        class="left">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+
+                <p class="text col-1-2 right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
+                    vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Atque corrupti vitae, iure
+                    voluptas accusantium, perferendis delectus sed excepturi illo expedita, aspernatur esse ab
+                    repellendus
+                    repudiandae dolor odio dolore adipisci ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit.
+                    Amet nesciunt magni sapiente distinctio commodi voluptates, voluptatum praesentium vitae fugit
+                    nobis.
+                    Natus aut fuga pariatur voluptatum, a voluptates laudantium nihil neque! </p>
+            </div>
+
+        </section>
+
+        <section id="section3" class="section">
+
+            <h1 class="headerLink text"><a name="games" class="headerLink text left">Games</a></h1>
+
+            <div class="row">
+
+            </div>
 
         </section>
 
         <div id="footer">
             <p><span class="glyphicon glyphicon-copyright-mark"></span> Copyright Marius Franzén - Website is currently
-                in Alpha
-                v.1</p>
+                in Alpha v.1</p>
         </div>
 
     </div>
