--- a/index.html
+++ b/index.html
@@ -171,9 +171,15 @@
 
         </section>
 
+
         <div id="footer">
-            <p><span class="glyphicon glyphicon-copyright-mark"></span> Copyright Marius Franzén - Website is currently
-                in Alpha v.1</p>
+            <div class="row">
+                <img src="http://www.reliablecounter.com/count.php?page=www.xn--drarna-iua.nu/&digit=style/plain/1/&reloads=0"
+                    alt="" title="" border="0" class="col-1-3 left" id="visitorCounter">
+                <p class="col-1-3 center center-vertically"><span class="glyphicon glyphicon-copyright-mark"></span> Copyright Marius
+                    Franzén - Website is currently
+                    in Alpha v.1</p>
+            </div>
         </div>
 
     </div>
