--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dårarna.nu</title>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser-ce/2.11.1/phaser.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
@@ -163,9 +165,23 @@
 
         <section id="section3" class="section">
 
-            <h1 class="headerLink text"><a name="games" class="headerLink text left">Games</a></h1>
+            <h1 class="headerLink text"><a name="games" class="headerLink text">Games</a></h1>
 
             <div class="row">
+
+                <div id="phaserGame" class="col-1-2 left"></div>
+                <script src="javaScripts/phaserGame.js"></script>
+
+                <p class="text col-1-2 right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+                    laboriosam deserunt corporis excepturi velit in, aut eius suscipit veritatis earum ipsa a qui
+                    repellendus, minima quaerat culpa inventore ipsam itaque. Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Reiciendis ducimus doloremque voluptas quas quam enim, dolorum illum eveniet unde
+                    deserunt quaerat vel nisi modi possimus quo harum commodi autem odio. Lorem, ipsum dolor sit amet
+                    consectetur adipisicing elit. Voluptatum
+                    laboriosam deserunt corporis excepturi velit in, aut eius suscipit veritatis earum ipsa a qui
+                    repellendus, minima quaerat culpa inventore ipsam itaque. Lorem ipsum, dolor sit amet consectetur
+                    adipisicing elit. Reiciendis ducimus doloremque voluptas quas quam enim, dolorum illum eveniet unde
+                    deserunt quaerat vel nisi modi possimus quo harum commodi autem odio.</p>
 
             </div>
 
@@ -176,9 +192,10 @@
             <div class="row">
                 <img src="http://www.reliablecounter.com/count.php?page=www.xn--drarna-iua.nu/&digit=style/plain/1/&reloads=0"
                     alt="" title="" border="0" class="col-1-3 left" id="visitorCounter">
-                <p class="col-1-3 center center-vertically"><span class="glyphicon glyphicon-copyright-mark"></span> Copyright Marius
+                <p class="col-1-3 center center-vertically"><span class="glyphicon glyphicon-copyright-mark"></span>
+                    Copyright Marius
                     Franzén - Website is currently
-                    in Alpha v.1</p>
+                    in Alpha v.2</p>
             </div>
         </div>
 
