Fixed game size on phones

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
             <div class="row">
 
                 <div id="phaserGame" class="col-1-2 left"></div>
-                <script src="javaScripts/phaserGame.js"></script>
+                <script src="javaScripts/phaser/phaserGame.js"></script>
 
-                <p class="text col-1-2 right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+                <p id="breakoutText" class="text col-1-2 right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
                     laboriosam deserunt corporis excepturi velit in, aut eius suscipit veritatis earum ipsa a qui
                     repellendus, minima quaerat culpa inventore ipsam itaque. Lorem ipsum, dolor sit amet consectetur
                     adipisicing elit. Reiciendis ducimus doloremque voluptas quas quam enim, dolorum illum eveniet unde
