--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <nav>
         <ul id="navbar">
             <li><a href="#start"><span class="glyphicon glyphicon-home"></span> Start</a></li>
-            <li><a href="#about"><span class="glyphicon glyphicon-user"></span> About Me</a></li>
-            <li><a href="#games"><span class="glyphicon glyphicon-pawn"></span> Games</a></li>
+            <li><a href="#about"><span class="glyphicon glyphicon-user"></span> Om mig</a></li>
+            <li><a href="#games"><span class="glyphicon glyphicon-pawn"></span> Spel</a></li>
             <li><a href="#cv"><span class="glyphicon glyphicon-envelope"></span> CV</a></li>
-            <li><a href="#contact"><span class="glyphicon glyphicon-phone-alt"></span> Contact</a></li>
+            <li><a href="#contact"><span class="glyphicon glyphicon-phone-alt"></span> Kontakt</a></li>
         </ul>
     </nav>
 
@@ -44,7 +44,7 @@
 
         <section id="section1" class="section">
 
-            <h1 class="headerLink text"><a name="start" class="headerLink text">Start</a></h1>
+            <h1><a name="start" class="headerLink text">Start</a></h1>
 
             <div class="row">
                 <p class="text col-1-2 left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque corrupti
@@ -104,7 +104,7 @@
 
         <section id="section2" class="section">
 
-            <h1 class="headerLink text"><a name="about" class="headerLink text">About</a></h1>
+            <h1><a name="about" class="headerLink text">Om mig</a></h1>
 
             <div class="row">
                 <p class="text col-1-2 left"> <img src="media/profilepic.jpg" alt="Picture of me goes here" id="profilePic"
@@ -165,14 +165,15 @@
 
         <section id="section3" class="section">
 
-            <h1 class="headerLink text"><a name="games" class="headerLink text">Games</a></h1>
+            <h1><a name="games" class="headerLink text">Spel</a></h1>
 
             <div class="row">
 
                 <div id="phaserGame" class="col-1-2 left"></div>
                 <script src="javaScripts/phaser/phaserGame.js"></script>
 
-                <p id="breakoutText" class="text col-1-2 right">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+                <p id="breakoutText" class="text col-1-2 right">Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit. Voluptatum
                     laboriosam deserunt corporis excepturi velit in, aut eius suscipit veritatis earum ipsa a qui
                     repellendus, minima quaerat culpa inventore ipsam itaque. Lorem ipsum, dolor sit amet consectetur
                     adipisicing elit. Reiciendis ducimus doloremque voluptas quas quam enim, dolorum illum eveniet unde
@@ -187,6 +188,65 @@
 
         </section>
 
+        <section id="section3" class="section">
+
+            <h1><a name="cv" class="headerLink text">CV</a></h1>
+
+            <div class="row">
+
+                <div class="col-1-3 left" id="cvProgramming">
+                    <h3><img src="media/icons8-code-50.png" alt="code" style="width: 35px;"> Programmeringsspråk:</h3>
+                    <p><img src="media/Java.png" alt="javaImg" class="programmingImg"> Java</p>
+                    <div class="barBackground">
+                        <div class="barForeground" id="javaBar">
+                            <p class="barPercentage">80%</p>
+                        </div>
+                    </div>
+                    <p><img src="media/cpp_logo.png" alt="cppImg" class="programmingImg"> C++</p>
+                    <div class="barBackground">
+                            <div class="barForeground" id="cppBar">
+                                <p class="barPercentage">60%</p>
+                            </div>
+                        </div>
+                    <p><img src="media/html_logo.png" alt="htmlImg" id="htmlImg"> HTML, CSS & JS</p>
+                    <div class="barBackground">
+                            <div class="barForeground" id="htmlBar">
+                                <p class="barPercentage">50%</p>
+                            </div>
+                        </div>
+                </div>
+
+                <div id="cvRightCol">
+                    <h3><span class="glyphicon glyphicon-briefcase"></span> Erfarenheter:</h3>
+
+                    <h5 class="workplace">Praktikant - Thoreb</h5>
+                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> 3x3 veckors perioder mellan Oktober 2018 - Juni 2019</h6>
+                    <p>Fick praktik i 3an hos Thoreb igen och fick jobba mycket själv och löste buggar på deras hemsida, och fick också jobba mycket med QML.</p>
+
+                    <h5 class="workplace">Kassör - Jamtli</h5>
+                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> Juli 2018 - Augusti 2018</h6>
+                    <p>Jag sommarjobbade på Jamtli i 3 veckor och var kassör i 50-tals macken.</p>
+
+                    <h5 class="workplace">Praktikant - Thoreb</h5>
+                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> 3x2 veckors perioder mellan Oktober 2017 - Juni 2018</h6>
+                    <p>Fick praktik i 2an hos Thoreb och fick lära mig mycket HTML och liknande.</p>
+
+                    <h5 class="workplace">Godisplockare - Karamellkungen</h5>
+                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> Oktober 2015 - Mars 2018</h6>
+                    <p>Jag jobbade de flesta helgerna på Ica Maxi och Ica Kvantum med att fylla på godis.</p>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section id="section4" class="section">
+
+            <h1><a name="contact" class="headerLink text">Kontakt</a></h1>
+
+        </section>
+
 
         <div id="footer">
             <div class="row">
@@ -195,7 +255,7 @@
                 <p class="col-1-3 center center-vertically"><span class="glyphicon glyphicon-copyright-mark"></span>
                     Copyright Marius
                     Franzén - Website is currently
-                    in Alpha v.2</p>
+                    in Alpha v.6</p>
             </div>
         </div>
 
