--- a/index.html
+++ b/index.html
@@ -204,31 +204,34 @@
                     </div>
                     <p><img src="media/cpp_logo.png" alt="cppImg" class="programmingImg"> C++</p>
                     <div class="barBackground">
-                            <div class="barForeground" id="cppBar">
-                                <p class="barPercentage">60%</p>
-                            </div>
+                        <div class="barForeground" id="cppBar">
+                            <p class="barPercentage">60%</p>
                         </div>
+                    </div>
                     <p><img src="media/html_logo.png" alt="htmlImg" id="htmlImg"> HTML, CSS & JS</p>
                     <div class="barBackground">
-                            <div class="barForeground" id="htmlBar">
-                                <p class="barPercentage">50%</p>
-                            </div>
+                        <div class="barForeground" id="htmlBar">
+                            <p class="barPercentage">50%</p>
                         </div>
+                    </div>
                 </div>
 
                 <div id="cvRightCol">
                     <h3><span class="glyphicon glyphicon-briefcase"></span> Erfarenheter:</h3>
 
                     <h5 class="workplace">Praktikant - Thoreb</h5>
-                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> 3x3 veckors perioder mellan Oktober 2018 - Juni 2019</h6>
-                    <p>Fick praktik i 3an hos Thoreb igen och fick jobba mycket själv och löste buggar på deras hemsida, och fick också jobba mycket med QML.</p>
+                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> 3x3 veckors perioder mellan
+                        Oktober 2018 - Juni 2019</h6>
+                    <p>Fick praktik i 3an hos Thoreb igen och fick jobba mycket själv och löste buggar på deras
+                        hemsida och jobbade mycket med QML.</p>
 
                     <h5 class="workplace">Kassör - Jamtli</h5>
                     <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> Juli 2018 - Augusti 2018</h6>
                     <p>Jag sommarjobbade på Jamtli i 3 veckor och var kassör i 50-tals macken.</p>
 
                     <h5 class="workplace">Praktikant - Thoreb</h5>
-                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> 3x2 veckors perioder mellan Oktober 2017 - Juni 2018</h6>
+                    <h6 class="workdate"><span class="glyphicon glyphicon-calendar"></span> 3x2 veckors perioder mellan
+                        Oktober 2017 - Juni 2018</h6>
                     <p>Fick praktik i 2an hos Thoreb och fick lära mig mycket HTML och liknande.</p>
 
                     <h5 class="workplace">Godisplockare - Karamellkungen</h5>
