Added spaceinvaders and imgs (WIP)

--- a/spaceinvaders.html
+++ b/spaceinvaders.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Breakout</title>
+    <title>Space Invaders</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser-ce/2.11.1/phaser.js"></script>
     <link rel="stylesheet" href="gameStylesheet.css">
@@ -15,7 +15,7 @@
 <body>
 
     <img id="backgroundImage" src="media/video-game-game-over-retro-arcade-screen-blue-look_nq3udezax__F0000.png" alt="">
-    <script src="javaScripts/phaser/phaserGame.js"></script>
+    <script src="javaScripts/phaser/spaceinvaders.js"></script>
 
 </body>
 
