--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-site-verification" content="nC2dMieF2yw24vU5lEfFS01eDuMPOrEDF-quKeOb4uI" />
-    <title>Dårarna.nu</title>
+    <title>Marius Franzén</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser-ce/2.11.1/phaser.js"></script>
 
